--- a/P007096.opf/layers/v002/Pagination.yml
+++ b/P007096.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 82034885563946308bda27c199d4e511
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   cabe2aa106164db29b2cc3786f1dfd46:
