--- a/P007096.opf/layers/v003/Pagination.yml
+++ b/P007096.opf/layers/v003/Pagination.yml
@@ -1,5 +1,5 @@
 id: 283388bf50bb440eab06a44da8d259a8
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   617cd7733175468f823b93fc23b63362:
