--- a/P007096.opf/layers/v004/Pagination.yml
+++ b/P007096.opf/layers/v004/Pagination.yml
@@ -1,5 +1,5 @@
 id: 11d69fb02ddb4a5d9952e667fc1097c5
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   aca2cba3cbfb495eb7960a4de58b1ffb:
