--- a/P007096.opf/layers/v005/Pagination.yml
+++ b/P007096.opf/layers/v005/Pagination.yml
@@ -1,5 +1,5 @@
 id: af8ae4267b9f4a7d95172f580816ec88
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   64189c7a973649f2b24f94fccc895a78:
