--- a/P007096.opf/layers/v006/Pagination.yml
+++ b/P007096.opf/layers/v006/Pagination.yml
@@ -1,5 +1,5 @@
 id: 2f66fa46cbbb4657bb689895000fafe0
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   1dab05a808cc492eb3ad1d374d8065aa:
