--- a/P007096.opf/layers/v007/Pagination.yml
+++ b/P007096.opf/layers/v007/Pagination.yml
@@ -1,5 +1,5 @@
 id: b46b70c3682f4d4bac17682ef8bddfd7
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   08a4d8cc39fa4e8b95c7602e6ce594e3:
