--- a/P007096.opf/layers/v008/Pagination.yml
+++ b/P007096.opf/layers/v008/Pagination.yml
@@ -1,5 +1,5 @@
 id: a0c99391ad134897945a93465c26b80f
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   4a54dad43da14dee97360cda8b1dc0db:
