--- a/P007096.opf/layers/v009/Pagination.yml
+++ b/P007096.opf/layers/v009/Pagination.yml
@@ -1,5 +1,5 @@
 id: ee32fe90687a4c76922e9f99dc571767
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   3cc1c6bea3094061802fa6171793a626:
