--- a/P007096.opf/layers/v010/Pagination.yml
+++ b/P007096.opf/layers/v010/Pagination.yml
@@ -1,5 +1,5 @@
 id: 0e1a3b919d8a488fa10a791280275ab7
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   7a3bb2393249461c8af048259366edce:
