--- a/P007096.opf/layers/v011/Pagination.yml
+++ b/P007096.opf/layers/v011/Pagination.yml
@@ -1,5 +1,5 @@
 id: f3ef2b641264428f896a09deed6e623a
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   6e961b535cc84678a0b7c45bea099aba:
