--- a/P007096.opf/layers/v012/Pagination.yml
+++ b/P007096.opf/layers/v012/Pagination.yml
@@ -1,5 +1,5 @@
 id: c2645a59720e4896875313292e37544d
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   324894a246b24912bcae18cec94eb0cf:
