--- a/P007096.opf/layers/v001/Pagination.yml
+++ b/P007096.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: e6fa1d0c804749fdbdd750c6ccce7189
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   bcdd2250dca5410db1676ff9e52a222c:
