--- a/P007096.opf/meta.yml
+++ b/P007096.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P007096
 initial_creation_type: ocr
+created_at: 31/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W23446
   title: འཛི་སྒར་ཀོང་སྤྲུལ་གསུང་ཕྱོགས་བསྡེབས།
@@ -77,10 +79,3 @@ source_metadata:
       volume_number: 12
       total_pages: 687
       base_file: v012.txt
-ebook_metadata:
-  title: འཛི་སྒར་ཀོང་སྤྲུལ་གསུང་ཕྱོགས་བསྡེབས།
-  author: ''
-  sku: P007096
-  cover: cover.jpg
-  layers:
-  - pagination
